--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,19 +4,21 @@ version '1.0-SNAPSHOT'
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
         maven {
             url "https://maven.google.com"
         }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath("com.android.tools.build:gradle:7.3.0")
     }
 }
 
 rootProject.allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         maven {
             url "https://maven.google.com"
         }
@@ -26,11 +28,20 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-    //buildToolsVersion '28.0.3'
+    // if (project.android.hasProperty("namespace")) {
+    //     namespace = "com.yourcompany.geocoder"
+    // }
+
+    compileSdk = 34
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
 
     defaultConfig {
-        minSdkVersion 16
+        minSdk = 21
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
